# Bloom-initializr

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/example/: controller.rs  models.rs
