[package]
name = "bloom-init"
version = "0.1.0"
edition = "2024"

[dependencies]
bloom-web = "0.1.5"

#dependencies
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

